<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded_white_ten"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/textH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_game" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/textBody3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/exit_game_desc" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAccept"
            style="@style/btnDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/exit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDismiss"
            style="@style/btnDialogOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>